Finalização tela de cadastros

--- a/app/views/modulos/celulas/cadastro.njk
+++ b/app/views/modulos/celulas/cadastro.njk
@@ -6,7 +6,9 @@
 </head>
 
 <body>
+  {% include 'partials/flash.njk' %}
   <section class="wrapper-page">
+
 
     {% include 'includes/header.njk' %}
     {% include 'includes/sideBar.njk' %}
