--- a/app/views/modulos/celulas/form_celulas.njk
+++ b/app/views/modulos/celulas/form_celulas.njk
@@ -1,4 +1,4 @@
-<form class="needs-validation" novalidate>
+<form method="post" action="/app/modulos/celulas/create"class="needs-validation" novalidate>
   <fieldset>
     <legend>Dados Célula</legend>
 
