--- a/app/views/includes/sideBar.njk
+++ b/app/views/includes/sideBar.njk
@@ -11,14 +11,14 @@
 		<ul>
 			<li>
 				<a class="waves-btn-hover current" href="/app/dashboard">
-					<i class="fas fa-tachometer-alt" title="Dashboard" aria-hidden="true"></i>
+					<i class="fas fa-tachometer-alt sidebar-icon" title="Dashboard" aria-hidden="true"></i>
 					<span class="link">Dashboard</span>
 				</a>
 			</li>
 
       <li class="sub-menu">
 				<a href="javascript:void(0);" class="waves-btn-hover">
-					<i class="fa fa-users" title="Pessoas" aria-hidden="true"></i>
+					<i class="fa fa-users sidebar-icon" title="Pessoas" aria-hidden="true"></i>
 					<span class="link">Pessoas</span>
 					<i class="fas fa-angle-down arrow"></i>
 				</a>
@@ -29,14 +29,14 @@
 
 			<li>
 				<a class="waves-btn-hover" href="">
-					<i class="far fa-money-bill-alt" title="Financeiro" aria-hidden="true"></i>
+					<i class="far fa-money-bill-alt sidebar-icon" title="Financeiro" aria-hidden="true"></i>
 					<span class="link">Financeiro</span>
 				</a>
 			</li>
 
 			<li class="sub-menu">
 				<a href="javascript:void(0);" class="waves-btn-hover">
-					<i class="fas fa-home" title="Células" aria-hidden="true"></i>
+					<i class="fas fa-home sidebar-icon" title="Células" aria-hidden="true"></i>
 					<span class="link">Células</span>
 					<i class="fas fa-angle-down arrow"></i>
 				</a>
@@ -47,7 +47,7 @@
 
       <li class="sub-menu">
 				<a href="javascript:void(0);" class="sub-nav waves-btn-hover">
-					<i class="far fa-chart-bar" title="Gráficos" aria-hidden="true"></i>
+					<i class="far fa-chart-bar sidebar-icon" title="Gráficos" aria-hidden="true"></i>
 					<span class="link">Gráficos</span>
 					<i class="fas fa-angle-down arrow"></i>
 				</a>
@@ -61,7 +61,7 @@
 
 			<li class="sub-menu">
 				<a href="javascript:void(0);" class="sub-nav waves-btn-hover">
-					<i class="fas fa-file-alt" title="Relatórios" aria-hidden="true"></i>
+					<i class="fas fa-file-alt sidebar-icon" title="Relatórios" aria-hidden="true"></i>
 					<span class="link">Relatórios</span>
 					<i class="fas fa-angle-down arrow"></i>
 				</a>
