--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -15,24 +15,11 @@
   background-color: #1c2331;
   box-shadow: 0 16px 38px -12px rgba(0,0,0,.56), 0 4px 25px 0 rgba(0,0,0,.12), 0 8px 10px -5px rgba(0,0,0,.2);
 }
-.fa-tachometer-alt {
+
+.sidebar-icon {
   color: #2bbbad;
 }
-.fa-money-bill-alt {
-  color: #2bbbad;
-}
-.fa-users {
-  color: #2bbbad;
-}
-.fa-home {
-  color: #2bbbad;
-}
-.fa-chart-bar {
-  color: #2bbbad;
-}
-.fa-file-alt {
-  color: #2bbbad;
-}
+
 .fa-expand-arrows-alt{
   color: #ffffff;
 }
@@ -839,4 +826,146 @@ overflow: hidden;
 visibility: hidden;
 width: 0;
 height: 0;
+}
+/*
+ * Component: Info Box
+ * -------------------
+ */
+ .info-box {
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.125), 0 1px 3px rgba(0, 0, 0, 0.2);
+  border-radius: 0.25rem;
+  padding: .5rem;
+  min-height: 80px;
+  background: #ffffff;
+}
+
+
+.info-box .progress {
+  background-color: rgba(0, 0, 0, 0.125);
+  margin: 5px 0;
+  height: 2px;
+}
+
+.info-box .progress .progress-bar {
+  background-color: #ffffff;
+}
+
+.info-box-icon {
+  border-radius: 0.25rem;
+  display: block;
+  width: 70px;
+  text-align: center;
+  font-size: 30px;
+  color: white;s
+}
+
+.info-box-icon > img {
+  max-width: 100%;
+}
+
+.info-box-content {
+  padding: 5px 10px;
+  flex: 1;
+}
+
+.info-box-number {
+  display: block;
+  font-weight: 700;
+}
+
+.progress-description,
+.info-box-text {
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.info-box.bg-primary, .info-box.label-primary,
+.info-box.bg-primary-gradient {
+  color: #ffffff;
+}
+
+.info-box.bg-primary .progress-bar, .info-box.label-primary .progress-bar,
+.info-box.bg-primary-gradient .progress-bar {
+  background-color: #ffffff;
+}
+
+.info-box.bg-secondary,
+.info-box.bg-secondary-gradient {
+  color: #ffffff;
+}
+
+.info-box.bg-secondary .progress-bar,
+.info-box.bg-secondary-gradient .progress-bar {
+  background-color: #ffffff;
+}
+
+.info-box.bg-success, .info-box.alert-success, .info-box.label-success,
+.info-box.bg-success-gradient {
+  color: #ffffff;
+}
+
+.info-box.bg-success .progress-bar, .info-box.alert-success .progress-bar, .info-box.label-success .progress-bar,
+.info-box.bg-success-gradient .progress-bar {
+  background-color: #ffffff;
+}
+
+.info-box.bg-info, .info-box.alert-info, .info-box.label-info,
+.info-box.bg-info-gradient {
+  color: #ffffff;
+}
+
+.info-box.bg-info .progress-bar, .info-box.alert-info .progress-bar, .info-box.label-info .progress-bar,
+.info-box.bg-info-gradient .progress-bar {
+  background-color: #ffffff;
+}
+
+.info-box.bg-warning, .info-box.alert-warning, .info-box.label-warning,
+.info-box.bg-warning-gradient {
+  color: #1F2D3D;
+}
+
+.info-box.bg-warning .progress-bar, .info-box.alert-warning .progress-bar, .info-box.label-warning .progress-bar,
+.info-box.bg-warning-gradient .progress-bar {
+  background-color: #1F2D3D;
+}
+
+.info-box.bg-danger, .info-box.alert-danger,
+.info-box.alert-error, .info-box.label-danger,
+.info-box.bg-danger-gradient {
+  color: #ffffff;
+}
+
+.info-box.bg-danger .progress-bar, .info-box.alert-danger .progress-bar, .info-box.alert-error .progress-bar, .info-box.label-danger .progress-bar,
+.info-box.bg-danger-gradient .progress-bar {
+  background-color: #ffffff;
+}
+
+.info-box.bg-light,
+.info-box.bg-light-gradient {
+  color: #1F2D3D;
+}
+
+.info-box.bg-light .progress-bar,
+.info-box.bg-light-gradient .progress-bar {
+  background-color: #1F2D3D;
+}
+
+.info-box.bg-dark,
+.info-box.bg-dark-gradient {
+  color: #ffffff;
+}
+
+.info-box.bg-dark .progress-bar,
+.info-box.bg-dark-gradient .progress-bar {
+  background-color: #ffffff;
+}
+
+.info-box-more {
+  display: block;
+}
+
+.progress-description {
+  margin: 0;
 }
