--- a/app/views/modulos/celulas/form_celulas.njk
+++ b/app/views/modulos/celulas/form_celulas.njk
@@ -47,13 +47,13 @@
         <label for="diasemana">Dia da Semana:</label>
         <select name="diasemana" class="form-control" required>
           <option value="" disabled selected>Selecione</option>
-          <option value="2">Segunda-Feira</option>
-          <option value="3">Terça-Feira</option>
-          <option value="4">Quarta-Feira</option>
-          <option value="5">Quinta-Feira</option>
-          <option value="6">Sexta-Feira</option>
-          <option value="7">Sábado</option>
-          <option value="1">Domingo</option>
+          <option value="Segunda-Feira">Segunda-Feira</option>
+          <option value="Terça-Feira">Terça-Feira</option>
+          <option value="Quarta-Feira">Quarta-Feira</option>
+          <option value="Quinta-Feira">Quinta-Feira</option>
+          <option value="Sexta-Feira">Sexta-Feira</option>
+          <option value="Sábado">Sábado</option>
+          <option value="Domingo">Domingo</option>
         </select>
         <div class="invalid-feedback">Por favor escolha um dia da semana.</div>
       </div>
